# live-bootcamp-project

./: .env  .gitignore  Makefile  README.md  compose.override.yml  compose.yml  docker.sh
.github/workflows/: prod.yml  ssl-config.yml
app-service/: .dockerignore  Cargo.toml  Dockerfile  bacon.toml
app-service/assets/: app.js
app-service/src/: main.rs
app-service/templates/: index.html
auth-service/: Cargo.toml  Dockerfile  api_schema.yml  sqlx-data.json
auth-service/.sqlx/: query-39368a836092c98e5d727b8c0dc2b4860711cf7c0f0242ea8974e9dfbfe90993.json  query-995129f5461e40599fefa0fb08c9ef4068b67a056019ae4c1df986f7ae597979.json
auth-service/assets/: app.js  index.html
auth-service/migrations/: 20240515193124_create_users_table.up.sql
auth-service/src/: app_state.rs  lib.rs  main.rs
auth-service/src/domain/: data_stores.rs  email.rs  email_client.rs  error.rs  mod.rs  password.rs  user.rs
auth-service/src/routes/: login.rs  logout.rs  mod.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_user_store.rs  hashset_banned_token_store.rs  mock_email_client.rs  mod.rs  postmark_email_client.rs
auth-service/src/services/data_stores/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mod.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/utils/: auth.rs  constants.rs  mod.rs  tracing.rs
auth-service/tests/: api.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  main.rs  root.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
config/nginx/: lgr.aldass.dev.conf
test_helpers/: Cargo.toml
test_helpers/src/: lib.rs
