[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }

[dev-dependencies]
reqwest = { version = "0.11.26", default-features = false, features = ["json"] }
